--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <title>Useless Website</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Hola!</h1>
+    </div>
+    <audio id="party" src="/public/sfx/partyhorn.ogg"> 
     <script src="/public/js/app.js"></script>
   </body>
 </html>
