--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,11 @@
   <body>
     <div class="container">
       <h1>Hola!</h1>
+      <div class="imgBtn">
+        <img src="/public/img/closed.png" />
+      </div>
+      <h2>You have clicked me 0 times!</h2>
     </div>
-    <audio id="party" src="/public/sfx/partyhorn.ogg"> 
     <script src="/public/js/app.js"></script>
   </body>
 </html>
