Added simple play/return buttons

--- a/game.html
+++ b/game.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/main.css" />
-    <title>Useless Website</title>
+    <title>Useless Website Game</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hola!</h1>
-      <h2>Want to play a game?</h2>
-      <button class="accept">Accept</button>
-      <button class="decline">Decline</button>
+      <div class="imgBtn">
+        <img src="/public/img/closed.png" />
+      </div>
+      <h2>You have clicked me 0 times!</h2>
+      <button class="return">Return</button>
     </div>
-    <script src="/public/js/index.js"></script>
+    <script src="/public/js/game.js"></script>
   </body>
 </html>
