Added party function
Works on both desktop and mobile.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/public/css/main.css" />
     <title>Useless Website</title>
   </head>
-  <body>
+  <body data-background="white">
     <div class="container">
       <h1>Hola!</h1>
       <h2>Want to play a game?</h2>
       <button class="accept">Accept</button>
-      <button class="decline">Decline</button>
+      <button class="decline">Decline</button><br />
+      <button class="party">I would rather party</button>
     </div>
     <script src="/public/js/index.js"></script>
   </body>
