Fixed some css and spelling.

--- a/game.html
+++ b/game.html
@@ -7,11 +7,12 @@
     <title>Useless Website Game</title>
   </head>
   <body>
-    <div class="container">
+    <h1>Pop the cat!</h1>
+    <div class="container hidden">
       <div class="imgBtn">
         <img src="/public/img/closed.png" />
+        <h2>0</h2>
       </div>
-      <h2>You have clicked me 0 times!</h2>
       <button class="return">Return</button>
     </div>
     <script src="/public/js/game.js"></script>
