--- a/game.html
+++ b/game.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/main.css" />
+    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
     <title>Useless Website Game</title>
   </head>
   <body>
     <h1>Pop the cat!</h1>
+    <h2>How many pops until you drop?</h2>
     <div class="container hidden">
-      <div class="imgBtn">
-        <img src="/public/img/closed.png" />
-        <h2>0</h2>
-      </div>
+      <img class="imgBtn" src="/public/img/closed.png" />
+      <h2 class="amountOfClicks">0</h2>
       <button class="return">Return</button>
     </div>
     <script src="/public/js/game.js"></script>
