--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/main.css" />
+    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
     <title>Useless Website</title>
   </head>
-  <body data-background="white">
+  <body>
     <div class="container">
       <h1>Hola!</h1>
       <h2>Want to play a game?</h2>
-      <button class="accept">Accept</button>
-      <button class="decline">Decline</button><br />
-      <button class="party">I would rather party</button>
+      <button class="accept hidden animation">Heck yes!</button>
+      <button class="decline hidden animation">Nope</button><br />
+      <button class="party hidden animation">I would rather party</button>
     </div>
     <script src="/public/js/index.js"></script>
   </body>
