--- a/game.html
+++ b/game.html
@@ -9,11 +9,15 @@
   </head>
   <body>
     <h1>Pop the cat!</h1>
+    <br />
     <h2>How many pops until you drop?</h2>
-    <div class="container hidden">
+    <div class="game-container hidden">
       <img class="imgBtn" src="/public/img/closed.png" />
+      <br />
+      <br />
       <h2 class="amountOfClicks">0</h2>
-      <button class="return">Return</button>
+      <br />
+      <button class="return">Return to start</button>
     </div>
     <script src="/public/js/game.js"></script>
   </body>
