--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div class="container">
       <h1>Hola!</h1>
       <h2>Want to play a game?</h2>
-      <button class="accept hidden animation">Heck yes!</button>
-      <button class="decline hidden animation">Nope</button><br />
-      <button class="party hidden animation">I would rather party</button>
+
+      <button id="first" class="accept hidden animation">Heck yes!</button>
+      <button id="second" class="decline hidden animation">Nope</button>
+      <br />
+      <br />
+      <button id="third" class="party hidden animation">I would rather party...</button>
     </div>
     <script src="/public/js/index.js"></script>
   </body>
