--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hola! &#128075;</h1>
+      <h1>Hola! <span class="wave">👋</span></h1>
       <h2>Want to play a game?</h2>
 
       <button id="first" class="accept hidden animation">Heck yes!</button>
       <button id="second" class="decline hidden animation">Nope</button>
       <br />
-      <button id="third" class="party hidden animation">I'd rather party</button>
+      <button id="third" class="party hidden animation">I would rather party</button>
     </div>
     <script src="/public/js/index.js"></script>
   </body>
